--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
         <ul id="top-menu-bar">
             <li><a href="#"> Home </a></li>
-            <li><a href="#" onclick = "clickOnSkills()">Skills</a></li>
-            <li><a href="#" onclick = "clickOnLanguages()">Languages</a></li>
+            <li><a href="#"> Skills</a></li>
+            <li><a href="#"> Languages</a></li>
             <li><a href="#"> About </a></li>
         </ul>
     </p>
