show skills with for

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         Facultatea de Stiinte Economice si Administratie Publica
 
         <ul id="top-menu-bar">
-            <li><a href="#"> Home </a></li>
-            <li><a href="#"> Skills</a></li>
-            <li><a href="#"> Languages</a></li>
-            <li><a href="#"> About </a></li>
+            <li><a href="#" data-page="home-page"> Home </a></li>
+            <li><a href="#" data-page="skills-page"> Skills</a></li>
+            <li><a href="#" data-page="languages-page"> Languages</a></li>
+            <li><a href="#" data-page="about-page"> About </a></li>
         </ul>
     </p>
 
@@ -37,7 +37,7 @@
         </div>
 
         <div class="content">
-            <div id="home-page" class="page"  style= "display: block;">
+            <div id="home-page" class="page" style="display: block;">
                 <h2> Home </h2>
                 <p> Wellcome </p>
             </div>
@@ -53,7 +53,7 @@
             <div id="sidebar-right">
 
             </div>
-            <div class="page">
+            <div id="languages-page" class="page">
                 <h2>Languages</h2>
                 <table border="1">
                     <tr>
@@ -66,7 +66,9 @@
                     </tr>
                 </table>
             </div>
-
+            <div id="about-page" class="page">
+                <h2>About</h2>
+            </div>
 
             <!-- <div class="page" style="display: block;">
                 <h2>About </h2>
